--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,5 @@
-MONGO_URL = "mongodb+srv://bhunvcs:QBua7E3otd652W33@api.p9dc7.mongodb.net/?retryWrites=true&w=majority&appName=api"
+MONGO_URL = "mongodb://localhost:27017/"
+
+ATLAS_URL = "mongodb+srv://bhunvcs:QBua7E3otd652W33@api.p9dc7.mongodb.net/?retryWrites=true&w=majority&appName=api"
 
 JWT_SECRET = 274839
